internal/testdata/node/ingress-templates/ingress-5/multiproject1.com.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fastly.amazee.io/watch: "false"
    idling.amazee.io/disable-request-verification: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    lagoon.sh/branch: multiproject
    lagoon.sh/version: v2.7.x
    monitor.stakater.com/enabled: "true"
    monitor.stakater.com/overridePath: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    uptimerobot.monitor.stakater.com/alert-contacts: alertcontact
    uptimerobot.monitor.stakater.com/interval: "60"
    uptimerobot.monitor.stakater.com/status-pages: statuspageid
  labels:
    activestandby.lagoon.sh/migrate: "false"
    app.kubernetes.io/instance: multiproject1.com
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: custom-ingress
    lagoon.sh/autogenerated: "false"
    lagoon.sh/buildType: branch
    lagoon.sh/environment: multiproject
    lagoon.sh/environmentType: production
    lagoon.sh/primaryIngress: "true"
    lagoon.sh/project: multiproject1
    lagoon.sh/service: multiproject1.com
    lagoon.sh/service-type: custom-ingress
    lagoon.sh/template: custom-ingress-0.1.0
    route.lagoon.sh/source: yaml
  name: multiproject1.com
spec:
  rules:
  - host: multiproject1.com
    http:
      paths:
      - backend:
          service:
            name: node
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - multiproject1.com
    secretName: multiproject1.com-tls
status:
  loadBalancer: {}
